<!--
  ~ Copyright (C) 2016 Ronald Martin <hello@itsronald.com>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ Last modified 10/12/16 11:22 PM.
  -->

<resources>
    <string name="app_name">Material ViewPagerIndicator</string>

    <!-- URLs -->
    <string name="repo_url"
        translatable="false">https://github.com/ronaldsmartin/Material-ViewPagerIndicator</string>

    <string name="simple_xml_example_activity_url" translatable="false">
        https://github.com/ronaldsmartin/Material-ViewPagerIndicator/blob/master/app/src/main/java/com/itsronald/materialviewpagerindicatorsample/SimpleXmlExampleActivity.java
    </string>
    <string name="simple_xml_example_layout_url" translatable="true">
        https://github.com/ronaldsmartin/Material-ViewPagerIndicator/blob/master/app/src/main/res/layout/activity_simple_xml_example.xml
    </string>

    <string name="simple_java_example_activity_url" translatable="false">
        https://github.com/ronaldsmartin/Material-ViewPagerIndicator/blob/master/app/src/main/java/com/itsronald/materialviewpagerindicatorsample/SimpleJavaExampleActivity.java
    </string>
    <string name="simple_java_example_layout_url" translatable="false">
        https://github.com/ronaldsmartin/Material-ViewPagerIndicator/blob/master/app/src/main/res/layout/activity_simple_java_example.xml
    </string>


    <!-- activity_main-->
    <string name="title_activity_main">Indicator Demo</string>
    <string name="subtitle_activity_main">Click an example to view it in action.</string>
    <string name="toggle_description">Toggle Description</string>
    <string name="more_examples_coming_soon">More examples coming soon!</string>


    <!-- Simple XML Example -->
    <string name="simple_xml_example_card_title">Simple XML Example</string>
    <string name="simple_xml_example_card_subtitle">Minimal configuration</string>
    <string name="simple_xml_example_card_text">
        "To use ViewPagerIndicator, all you need to do is drop it into your ViewPager layout.\n\n"

        "Add the indicator as a direct child of the ViewPager in your XML layout and set "
        "layout_gravity to position the indicator."
    </string>
    <string name="simple_xml_action_view_activity">Activity</string>
    <string name="simple_xml_action_view_layout">Layout</string>


    <!-- Simple Java Example -->
    <string name="simple_java_example_card_title">Simple Java Example</string>
    <string name="simple_java_example_card_subtitle">When XML doesn\'t meet your needs</string>
    <string name="simple_java_example_card_text">
        "To use ViewPagerIndicator from Java, all you need to do is add the view to your ViewPager.\n\n"

        "You will need to create a LayoutParams object to position the indicator when adding it."
        "ViewPagerIndicator respects most standard attributes such as layout gravity and padding.\n\n"

        "Please note that due to the implementation of the Support ViewPager widget, the "
        "indicator\'s width will be fixed to match_parent, even if you specify wrap_content."
    </string>
    <string name="simple_java_action_view_activity">Activity</string>
    <string name="simple_java_action_view_layout">Layout</string>

</resources>
