<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Ronald Martin <hello@itsronald.com>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ Last modified 10/13/16 11:34 AM.
  -->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <!-- Toolbar -->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <!-- Content -->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/scrollview_background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Simple XML Example-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:onClick="onSimpleXmlExampleCardClick"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_simple_xml_title"
                        android:text="@string/simple_xml_example_card_title"
                        style="@style/CardText.Title"/>

                    <TextView
                        android:id="@+id/text_simple_xml_subtitle"
                        android:layout_below="@+id/text_simple_xml_title"
                        android:text="@string/simple_xml_example_card_subtitle"
                        style="@style/CardText.Subtitle"/>

                    <TextView
                        android:id="@+id/text_simple_xml_description"
                        android:layout_below="@+id/text_simple_xml_subtitle"
                        android:text="@string/simple_xml_example_card_text"
                        style="@style/CardText.Body"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <!-- Simple Java Example -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:onClick="onSimpleJavaExampleCardClick"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_simple_java_title"
                        android:text="@string/simple_java_example_card_title"
                        style="@style/CardText.Title"/>

                    <TextView
                        android:id="@+id/text_simple_java_subtitle"
                        android:layout_below="@+id/text_simple_java_title"
                        android:text="@string/simple_java_example_card_subtitle"
                        style="@style/CardText.Subtitle"/>

                    <TextView
                        android:id="@+id/text_simple_java_description"
                        android:layout_below="@+id/text_simple_java_subtitle"
                        android:text="@string/simple_java_example_card_text"
                        style="@style/CardText.Body"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onFABClick"
        android:tint="@android:color/white"
        app:srcCompat="@drawable/ic_code_black_24dp"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end|right"
        app:useCompatPadding="true"/>

</android.support.design.widget.CoordinatorLayout>
